--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<header>Шапка сайта</header>
-	<iframe scr="https://github.com/NikKalitov/NikKalitov.github.io/blob/main/index.html"> Браузер не поддерживает</iframe>
+	<iframe scr="https://nikkalitov.github.io/index.html"> Браузер не поддерживает</iframe>
 </body>
 </html>
