--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 	<header>Шапка сайта</header>
-	<iframe scr="https://nikkalitov.github.io/#/index.html" width="3000px" height="3000px"> Браузер не поддерживает</iframe>
+	<iframe scr="https://nikkalitov.github.io/index.html" width="3000px" height="3000px"> Браузер не поддерживает</iframe>
 </body>
 </html>
